@@ -1,6 +1,11 @@
 Changes since version 3.0.0
 ---------------------------
 
+- Added ProxyIdentityKey and ProxyIdentityFacetKey helper
+  classes to allow proxies to be inserted into collections
+  and use only the identity, or the identity and facet name
+  as the key. (See section 14.11.3 in the doc.)
+
 - Fixed a bug in endpoint comparisons that would cause new
   connections to be created needlessly.  This would occur when 
   the representation of the host differed between the proxy and 
